     and annotated to plain conversion. (Ian Clatworthy)

   * The CommitBuilder method ``record_entry_contents`` now returns summary
     information about the effect of the commit on the repository. This tuple
     contains an inventory delta item if the entry changed from the basis, and a
     boolean indicating whether a new file graph node was recorded.
     (Robert Collins)

  TESTING:

   * New helper function ``bzrlib.tests.filter_suite_by_condition`` which
     generalises the ``filter_suite_by_re`` function. (Robert Collins)

   * New helper method ``bzrlib.tests.exclude_tests_by_re`` which gives a new
     TestSuite that does not contain tests from the input that matched a
     regular expression. (Robert Collins)

   * New helper method ``bzrlib.tests.randomise_suite`` which returns a
     randomised copy of the input suite. (Robert Collins)

   * New helper method ``bzrlib.tests.split_suite_by_re`` which splits a test
     suite into two according to a regular expression. (Robert Collins)

   * New transport implementation ``trace+`` which is useful for testing,
     logging activity taken to its _activity attribute. (Robert Collins)

   * The ``exclude_pattern`` and ``random_order`` parameters to the function
     ``bzrlib.tests.filter_suite_by_re`` have been deprecated. (Robert Collins)

   * The method ``bzrlib.tests.sort_suite_by_re`` has been deprecated. It is 
     replaced by the new helper methods added in this release. (Robert Collins)

   * When running bzr commands within the test suite, internal exceptions are
     not caught and reported in the usual way, but rather allowed to propagate
     up and be visible to the test suite.  A new API ``run_bzr_catch_user_errors``
     makes this behavior available to other users.
     (Martin Pool)


bzr 0.91 2007-09-26
===================

  BUG FIXES:

   * Print a warning instead of aborting the ``python setup.py install``
     process if building of a C extension is not possible.