@@ -263,6 +263,9 @@ IN DEVELOPMENT
 
   TESTING:
 
+   * New helper function ``bzrlib.tests.condition_isinstance`` which helps
+     filter tests based on class. (Robert Collins)
+    
    * New helper function ``bzrlib.tests.filter_suite_by_condition`` which
      generalises the ``filter_suite_by_re`` function. (Robert Collins)
 
